# clipboard-server

./: CMakeLists.txt  readme.md
headers/: myserver.hpp
src/: main.cpp  myserver.cpp
